# fave-syllabify

./: .gitignore  .nojekyll  CITATION.cff  README.md  README.qmd  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: build_docs.yml  lint-and-test.yml
docs/: _quarto.yml  index.qmd  objects.json
docs/_freeze/index/execute-results/: html.json
docs/reference/: _sidebar.yml  index.qmd  syllabify.qmd
docs/styles/: light.scss  styles.css
reference/: index.html  syllabify.html
src/fave_syllabify/: __init__.py  syllabify.py
tests/: .gitignore  test_filler.py  test_syllabify.py
tests/data/aligned/: words.TextGrid
